# ChangeLog for sys-cluster/cman-kernel
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/ChangeLog,v 1.21 2006/10/15 10:45:24 xmerlin Exp $

  15 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.02.00-r1.ebuild, cman-kernel-1.03.00.ebuild:
  Removed check_KV.

  14 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
  -cman-kernel-1.01.00.ebuild, -cman-kernel-1.02.00.ebuild,
  cman-kernel-1.02.00-r1.ebuild, cman-kernel-1.03.00.ebuild:
  Ebuild cleanup. Added some compile/install checks.

  14 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.01.00.ebuild, cman-kernel-1.02.00.ebuild,
  cman-kernel-1.02.00-r1.ebuild, cman-kernel-1.03.00.ebuild:
  Added linux-mod_pkg_setup to prevent compilation without a configured kernel.

*cman-kernel-1.03.00 (30 Aug 2006)

  30 Aug 2006; Christian Zoffoli <xmerlin@gentoo.org>
  +cman-kernel-1.03.00.ebuild:
  Version bump.

  24 Aug 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.02.00-r1.ebuild:
  Stable x86.

  14 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.02.00-r1.ebuild:
  Changed eclass order.

  14 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.02.00-r1.ebuild:
  Patch renamed.

  14 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.02.00-r1.ebuild:
  updated 1.02.00 patch.

*cman-kernel-1.02.00-r1 (13 Jul 2006)

  13 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  +cman-kernel-1.02.00-r1.ebuild:
  1.02.00 updated to current stable.

  13 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  -cman-kernel-1.00.00-r1.ebuild:
  Ebuild cleanup.

  30 Apr 2006; Christian Zoffoli <xmerlin@gentoo.org>
  cman-kernel-1.01.00.ebuild:
  Stable on x86.

*cman-kernel-1.02.00 (30 Apr 2006)

  30 Apr 2006; Christian Zoffoli <xmerlin@gentoo.org>
  +cman-kernel-1.02.00.ebuild:
  Version bump.

*cman-kernel-1.01.00 (08 Oct 2005)
