@@ -4,18 +4,18 @@ Hash: SHA1
 DIST cluster-1.02.00.tar.gz 1356451 RMD160 e9c0cdd1f5a7542c8a4ea38ccf6d057767269dc5 SHA1 d74cadb1ef21d1cfda333b20d7ef20272e0002d6 SHA256 de45885146f1481808f7a34af5e6b7e2042895a4e3844eaa6161f942345c7849
 DIST cluster-1.03.00.tar.gz 1658274 RMD160 6fc16e2edba73dd1a83ecfad749b1553eca6d938 SHA1 c205d8ec034433c33f26724f7f69b0028d2a63d4 SHA256 e61c2438c7ee8d546aec9dd86ee1851c9a71f127c25ad1fb0c59eb4ed534e97b
 DIST cman-kernel-1.02.00-20060714-cvs.patch.gz 3464 RMD160 8714f1bba3765fbee184f9ed0ac8f0f2e93fb2ea SHA1 77de473c2d2107129fdb1627553bcece65e8f0e7 SHA256 5ccc53894086e76e2bcb924ff1fb337a80b9fab2886882023aa30673f50770bb
-EBUILD cman-kernel-1.02.00-r1.ebuild 1445 RMD160 7c8dd66d992cdfc7018d0a511e151d88994da9fd SHA1 11da5f67c1b45f1c622a6dc2c6a87dc85684d107 SHA256 dfbf0ab0b6ac9c1bea81b2cb2a7aac5090773bc3f78b5714a66fad4181c0b816
-MD5 41c29421d1c2c4a924d3d0b31d26b3d0 cman-kernel-1.02.00-r1.ebuild 1445
-RMD160 7c8dd66d992cdfc7018d0a511e151d88994da9fd cman-kernel-1.02.00-r1.ebuild 1445
-SHA256 dfbf0ab0b6ac9c1bea81b2cb2a7aac5090773bc3f78b5714a66fad4181c0b816 cman-kernel-1.02.00-r1.ebuild 1445
-EBUILD cman-kernel-1.03.00.ebuild 1145 RMD160 1b02a831770fec39d2d82236776389821a890294 SHA1 e559f973dc0482aef7210f5e9b3b5bbd5e40f930 SHA256 94232f951306a0a52260bfb77a158df471235df8764b543ec5de2751380a284d
-MD5 a4f6f1891d41e442fb6450b7b3373cca cman-kernel-1.03.00.ebuild 1145
-RMD160 1b02a831770fec39d2d82236776389821a890294 cman-kernel-1.03.00.ebuild 1145
-SHA256 94232f951306a0a52260bfb77a158df471235df8764b543ec5de2751380a284d cman-kernel-1.03.00.ebuild 1145
-MISC ChangeLog 3234 RMD160 d1ad0b6af19a7593787e47ef652697e5e29eef74 SHA1 3234e206dbe97d0b6aef6cc208c0aa63bbbcc135 SHA256 72549d19db92cce5ac10cf23614ac4087ea5a59ce59ed294c9faacf155cf4af9
-MD5 be2b2af3a091490a4a3a9c78d0d68fa8 ChangeLog 3234
-RMD160 d1ad0b6af19a7593787e47ef652697e5e29eef74 ChangeLog 3234
-SHA256 72549d19db92cce5ac10cf23614ac4087ea5a59ce59ed294c9faacf155cf4af9 ChangeLog 3234
+EBUILD cman-kernel-1.02.00-r1.ebuild 1414 RMD160 d6c55c1a0e0340cddccfc9cb9a29e287b52eb338 SHA1 c9b11663f22df2f3d9439b37ec34a7a69fc6c311 SHA256 c896d3a2117410a17103138e685e24dc04d936d4d5e1988d0cea57a4beb60a5b
+MD5 6b79ce7d5a58760add48367ff7ded91a cman-kernel-1.02.00-r1.ebuild 1414
+RMD160 d6c55c1a0e0340cddccfc9cb9a29e287b52eb338 cman-kernel-1.02.00-r1.ebuild 1414
+SHA256 c896d3a2117410a17103138e685e24dc04d936d4d5e1988d0cea57a4beb60a5b cman-kernel-1.02.00-r1.ebuild 1414
+EBUILD cman-kernel-1.03.00.ebuild 1146 RMD160 b603e157862cb19f1480e5f76b1ba09913f14e0e SHA1 fa22b7253a744d193b507880da79aa6dd2bfa874 SHA256 bc8f917b3996df615969f0083ebd8c2504f3aea97b910bc0557fc1122d8ce821
+MD5 c3feba88ef3fd0f98122055e6c4a29a0 cman-kernel-1.03.00.ebuild 1146
+RMD160 b603e157862cb19f1480e5f76b1ba09913f14e0e cman-kernel-1.03.00.ebuild 1146
+SHA256 bc8f917b3996df615969f0083ebd8c2504f3aea97b910bc0557fc1122d8ce821 cman-kernel-1.03.00.ebuild 1146
+MISC ChangeLog 3368 RMD160 b55ef6b43719f8444becc561a96c96706cd321ea SHA1 0e9d2a3de47776cba8a95e697ef4b0d819f8f913 SHA256 37d22de772e5127777dda0a52b7bed7c4ad46e5b513528f2afc7a49dc7a2185f
+MD5 8bab5e301b8d773d53ffd24d4782cd68 ChangeLog 3368
+RMD160 b55ef6b43719f8444becc561a96c96706cd321ea ChangeLog 3368
+SHA256 37d22de772e5127777dda0a52b7bed7c4ad46e5b513528f2afc7a49dc7a2185f ChangeLog 3368
 MISC metadata.xml 223 RMD160 f9651ff0237b684fc6b65b83bb9140623b669a6d SHA1 033d2c47eb2bfe68e657ac2d68a7bfd28aab5b22 SHA256 b75b89c431f244420a0c81f9157c9fc656a919a8aac011778e1b410f70851bd3
 MD5 a64b9a1937a5cfc2fbaf373521f65d47 metadata.xml 223
 RMD160 f9651ff0237b684fc6b65b83bb9140623b669a6d metadata.xml 223
@@ -29,7 +29,7 @@ SHA256 2cebe51521eb8f9a520e29bb0d8baa5820ef747d5e5e18218a5d1880e40167f8 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFFMiDbgMUyd/cdjWsRAkbnAJ4hqYtt1PhEk33M64OMaQqWSsmGlgCfYadB
-RFIYk6JkiH4KfTpWeI4w2Ik=
-=FTuF
+iD8DBQFFMkPlgMUyd/cdjWsRAmT3AJ97ee939MZdm3FyldXw4GQdlMDlBgCePxjb
+P/yD8COy+PMENhbQxSuHr5A=
+=AbIi
 -----END PGP SIGNATURE-----
