@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/cman-kernel-1.02.00-r1.ebuild,v 1.7 2006/10/15 10:45:24 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/cman-kernel-1.02.00-r1.ebuild,v 1.8 2006/10/15 13:14:54 xmerlin Exp $
 
 inherit eutils linux-mod linux-info
 
@@ -28,9 +28,9 @@ S="${WORKDIR}/${MY_P}/${PN}"
 
 pkg_setup() {
 	linux-mod_pkg_setup
-        case ${KV_FULL} in
-	        2.2.*|2.4.*) die "${P} supports only 2.6 kernels";;
-        esac
+	case ${KV_FULL} in
+		2.2.*|2.4.*) die "${P} supports only 2.6 kernels";;
+	esac
 }
 
 src_unpack() {
@@ -40,7 +40,6 @@ src_unpack() {
 }
 
 src_compile() {
-	check_KV
 	set_arch_to_kernel
 
 	./configure --kernel_src=${KERNEL_DIR} --verbose || die "configure error"
