@@ -1,8 +1,8 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/cman-kernel-1.03.00.ebuild,v 1.4 2006/10/15 10:45:24 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/cman-kernel-1.03.00.ebuild,v 1.5 2006/10/15 13:14:54 xmerlin Exp $
 
-inherit linux-mod
+inherit linux-mod linux-info
 
 MY_P="cluster-${PV}"
 
@@ -31,7 +31,6 @@ pkg_setup() {
 }
 
 src_compile() {
-	check_KV
 	set_arch_to_kernel
 
 	./configure --kernel_src=${KERNEL_DIR} --verbose || die "configure error"
