@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/cman-kernel
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/ChangeLog,v 1.21 2006/10/15 10:45:24 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cman-kernel/ChangeLog,v 1.22 2006/10/15 13:14:54 xmerlin Exp $
+
+  15 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
+  cman-kernel-1.02.00-r1.ebuild, cman-kernel-1.03.00.ebuild:
+  Improved ebuild
 
   15 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
   cman-kernel-1.02.00-r1.ebuild, cman-kernel-1.03.00.ebuild:
